# WP3-cost-model

./: CMakeLists.txt  LICENSE  README.md  costmodel.uxf
UML/: costmodel.uxf
include/: Access.h  CostModel.h  DataLayout.h  Device.h  Hardware.h  Link.h  Topology.h  typedefs.h  utils.h
src/: Access.cpp  CMakeLists.txt  CostModel.cpp  Device.cpp  Hardware.cpp  Topology.cpp  utils.cpp
tests/: CMakeLists.txt  c2UnitTests.cpp
